Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53066

Regression: After Popup open, drawer shadowed by an overlay

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.7.0 RC
    • 5.7.0 Beta
    • Quick: Controls 2
    • None
    • Android 4.4
    • 22bc04cf151d008e7bc1f825c5b55744144a0374, a57c31e5ed5a4b4649084aa528ed75f25d0881e1

    Description

      If I open popup, the drawer became shadowed by an overlay (Material style).
      To reproduce, run gallery example, got to "Popup", open popup, close popup, open drawer.
      This behaviour started after recent updates in git.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            krnekit Nikita Krupenko
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes