Fix overlay stacking order

Task-number: QTBUG-53066
Change-Id: I552ee6e18e3f6a71c05ff3887a85501bbb6eebc7
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>